Trying again with modified build variables

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo Loading environemt variables...
-      - source vars-dev.txt
+      - export $(cat ./vars-dev.txt | xargs)
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
       - echo cloning down textcat_goemotions...
