--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,6 +11,11 @@ phases:
     commands:
       - echo Loading environemt variables...
       - export $(cat ./vars-dev.txt | xargs)
+      - echo Service is $SERVICE_NAME
+      - echo Account is $AWS_ACCOUNT_ID
+      - echo Region is $AWS_REGION
+      - echo ECR repo is $ECR_REPO
+      - echo Cluster is $CLUSTER_NAME
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
       - echo cloning down textcat_goemotions...
@@ -30,13 +35,13 @@ phases:
       - echo Building the Docker image...
       - docker build -t $SERVICE_NAME-image .
       - echo Running smoke test on the container...
-      - docker run -d -p 80:80 --name $SERVICE_NAME-container $SERVICE_NAME-image
+      - docker run -d --rm -p 8080:80 --name $SERVICE_NAME-container $SERVICE_NAME-image &
       - sleep 5  # Wait for the container to start
       - |
         python -c "
         import requests
         try:
-            response = requests.post('http://localhost:80/predict', json={'text': 'this is some text'})
+            response = requests.post('http://localhost:8080/predict', json={'text': 'this is some text'})
             assert response.status_code == 200, 'Smoke test failed!'
             print('Smoke test passed:', response.json())
         except Exception as e:
@@ -44,7 +49,6 @@ phases:
             exit(1)
         "
       - docker stop $SERVICE_NAME-container
-      - docker rm $SERVICE_NAME-container
   post_build:
     commands:
       - echo Tagging the Docker image...
@@ -52,11 +56,19 @@ phases:
       - echo Pushing Docker image to ECR...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$SERVICE_NAME-image
       - echo Preparing task definition...
-      - sed -e "s|<ECR_REPO>|$ECR_REPO|g" \
-            -e "s|<SERVICE_NAME>|$SERVICE_NAME|g" \
-            -e "s|<AWS_REGION>|$AWS_REGION|g" \
-            -e "s|<AWS_ACCOUNT_ID>|$AWS_ACCOUNT_ID|g" \
-            task_definition_template.json > task_definition.json
+      - |
+        python -c "
+        import json
+        with open('task_definition_template.json') as f:
+            task_definition = json.load(f)
+        task_definition['family'] = '$SERVICE_NAME'
+        task_definition['containerDefinitions'][0]['name'] = '$ECR_REPO'
+        task_definition['containerDefinitions'][0]['image'] = '$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$SERVICE_NAME-image'
+        task_definition['containerDefinitions'][0]['logConfiguration']['options']['awslogs-group'] = '/ecs/$SERVICE_NAME'
+        task_definition['containerDefinitions'][0]['logConfiguration']['options']['awslogs-region'] = '$AWS_REGION'
+        with open('task_definition.json', 'w') as f:
+            json.dump(task_definition, f, indent=2)
+        "
       - echo Registering task definition...
       - aws ecs register-task-definition --cli-input-json file://task_definition.json
       - echo Checking if ECS service exists...
@@ -74,7 +86,7 @@ phases:
               --desired-count 1 \
               --launch-type FARGATE \
               --network-configuration "awsvpcConfiguration={subnets=[subnet-061a6219b4c4f846a,subnet-0e4dcb4f98967aaec],securityGroups=[sg-09e220f656a51ebb9],assignPublicIp=ENABLED}" \
-              --load-balancers "targetGroupArn=arn:aws:elasticloadbalancing:us-east-2:982081073440:targetgroup/mlops-workshop-tg/d31b14cf11a57b49,containerName=$ECR_REPO:latest,containerPort=80}"
+              --load-balancers "targetGroupArn=arn:aws:elasticloadbalancing:us-east-2:982081073440:targetgroup/mlops-workshop-tg/d31b14cf11a57b49,containerName=$ECR_REPO:$SERVICE_NAME-image,containerPort=80}"
         fi
 artifacts:
   files:
