--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -88,6 +88,13 @@ phases:
             aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
         else
             echo "Service does not yet exist. Creating ECS service..."
+            echo "Setting up ALB routing for $SERVICE_NAME..."
+            export ALB_ARN=$(aws elbv2 describe-load-balancers --names mlops-workshop-alb --query 'LoadBalancers[0].LoadBalancerArn' --output text)
+            export TG_ARN=$(aws elbv2 create-target-group --name mlops-workshop-$SERVICE_NAME-tg --protocol HTTP --port 8080 --vpc-id $VPC_ID --target-type ip --query 'TargetGroups[0].TargetGroupArn' --output text)
+            echo "Adding routing rule for /$SERVICE_NAME..."
+            export LISTENER_ARN=$(aws elbv2 describe-listeners --load-balancer-arn $ALB_ARN --query 'Listeners[0].ListenerArn' --output text)
+            aws elbv2 create-rule --listener-arn $LISTENER_ARN --conditions '[{"Field":"path-pattern","Values":["/'"$SERVICE_NAME"'"]}]' --priority $PRIORITY --actions '[{"Type":"forward","TargetGroupArn":"'"$TG_ARN"'"}]'
+            echo "Creating ECS service..."
             aws ecs create-service \
               --cluster $CLUSTER_NAME \
               --service-name $SERVICE_NAME \
@@ -95,7 +102,7 @@ phases:
               --desired-count 1 \
               --launch-type FARGATE \
               --network-configuration "awsvpcConfiguration={subnets=[subnet-061a6219b4c4f846a,subnet-0e4dcb4f98967aaec],securityGroups=[sg-09e220f656a51ebb9],assignPublicIp=ENABLED}" \
-              --load-balancers "targetGroupArn=arn:aws:elasticloadbalancing:us-east-2:982081073440:targetgroup/mlops-workshop-tg/d31b14cf11a57b49,containerName=$ECR_REPO:$SERVICE_NAME-image,containerPort=80}"
+              --load-balancers "targetGroupArn=$TG_ARN,containerName=$ECR_REPO:$SERVICE_NAME-image,containerPort=8080"
         fi
 artifacts:
   files:
