add code to ensure log group exists before deployment

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -82,6 +82,15 @@ phases:
         "
       - echo Registering task definition...
       - aws ecs register-task-definition --cli-input-json file://task_definition.json
+      - echo Checking if CloudWatch log group exists...
+      - |
+        LOG_GROUP_EXISTS=$(aws logs describe-log-groups --log-group-name-prefix /ecs/$SERVICE_NAME --query 'logGroups[0].logGroupName' --output text)
+        if [ "$LOG_GROUP_EXISTS" == "/ecs/$SERVICE_NAME" ]; then
+            echo "Log group exists."
+        else
+            echo "Log group does not yet exist. Creating CloudWatch log group..."
+            aws logs create-log-group --log-group-name /ecs/$SERVICE_NAME
+        fi
       - echo Checking if ECS service exists...
       - |
         SERVICE_EXISTS=$(aws ecs describe-services --cluster $CLUSTER_NAME --services $SERVICE_NAME --query 'services[0].status' --output text)
