--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,7 +14,7 @@ phases:
       - echo Service is $SERVICE_NAME
       - echo Account is $AWS_ACCOUNT_ID
       - echo Region is $AWS_REGION
-      - echo ECR repo is $ECR_REPO
+      - echo ECR repo is $SERVICE_NAME
       - echo Cluster is $CLUSTER_NAME
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
@@ -35,7 +35,7 @@ phases:
       - cd ..
       - echo Training complete. Model is available at textcat_goemotions/training/cnn/model-best
       - echo Building the Docker image...
-      - docker build -t $SERVICE_NAME-image .
+      - docker build -t $SERVICE_NAME .
       # - echo Running smoke test on the container...
       # - docker run -d -p 80:80 --name $SERVICE_NAME-container $SERVICE_NAME-image
       # - sleep 15  # Wait for the container to start
@@ -60,10 +60,19 @@ phases:
       # - docker rm -f $SERVICE_NAME-container
   post_build:
     commands:
+      - echo Check if ECR repo exists...
+      - |
+        REPO_EXISTS=$(aws ecr describe-repositories --repository-names $SERVICE_NAME --query 'repositories[0].repositoryName' --output text)
+        if [ "$REPO_EXISTS" == "$SERVICE_NAME" ]; then
+            echo "ECR repo exists."
+        else
+            echo "ECR repo does not yet exist. Creating ECR repo..."
+            aws ecr create-repository --repository-name $SERVICE_NAME
+        fi
       - echo Tagging the Docker image...
-      - docker tag $SERVICE_NAME-image:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$SERVICE_NAME-image
+      - docker tag $SERVICE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest
       - echo Pushing Docker image to ECR...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$SERVICE_NAME-image
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest
       - echo Preparing task definition...
       - |
         python -c "
@@ -73,8 +82,8 @@ phases:
         task_definition['family'] = '$SERVICE_NAME'
         task_definition['executionRoleArn'] = 'arn:aws:iam::$AWS_ACCOUNT_ID:role/mlops-workshop-ecs-task-role'
         task_definition['taskRoleArn'] = 'arn:aws:iam::$AWS_ACCOUNT_ID:role/mlops-workshop-ecs-task-role'
-        task_definition['containerDefinitions'][0]['name'] = '$ECR_REPO'
-        task_definition['containerDefinitions'][0]['image'] = '$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$SERVICE_NAME-image'
+        task_definition['containerDefinitions'][0]['name'] = '$SERVICE_NAME'
+        task_definition['containerDefinitions'][0]['image'] = '$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest'
         task_definition['containerDefinitions'][0]['logConfiguration']['options']['awslogs-group'] = '/ecs/$SERVICE_NAME'
         task_definition['containerDefinitions'][0]['logConfiguration']['options']['awslogs-region'] = '$AWS_REGION'
         with open('task_definition.json', 'w') as f:
@@ -104,7 +113,7 @@ phases:
             export TG_ARN=$(aws elbv2 create-target-group --name $SERVICE_NAME-tg --protocol HTTP --port 80 --vpc-id $VPC_ID --target-type ip --query 'TargetGroups[0].TargetGroupArn' --output text)
             echo "Adding routing rule for /$SERVICE_NAME..."
             export LISTENER_ARN=$(aws elbv2 describe-listeners --load-balancer-arn $ALB_ARN --query 'Listeners[0].ListenerArn' --output text)
-            aws elbv2 create-rule --listener-arn $LISTENER_ARN --conditions '[{"Field":"path-pattern","Values":["/'"$SERVICE_NAME"'/predict"]}]' --priority $PRIORITY --actions '[{"Type":"forward","TargetGroupArn":"'"$TG_ARN"'"}]'
+            aws elbv2 create-rule --listener-arn $LISTENER_ARN --conditions '[{"Field":"path-pattern","Values":["/'"$SERVICE_NAME"'/*"]}]' --priority $PRIORITY --actions '[{"Type":"forward","TargetGroupArn":"'"$TG_ARN"'"}]'
             echo "Creating ECS service..."
             aws ecs create-service \
               --cluster $CLUSTER_NAME \
@@ -113,7 +122,7 @@ phases:
               --desired-count 1 \
               --launch-type FARGATE \
               --network-configuration "awsvpcConfiguration={subnets=[subnet-061a6219b4c4f846a,subnet-0e4dcb4f98967aaec],securityGroups=[sg-09e220f656a51ebb9],assignPublicIp=ENABLED}" \
-              --load-balancers "targetGroupArn=$TG_ARN,containerName=$ECR_REPO,containerPort=80"
+              --load-balancers "targetGroupArn=$TG_ARN,containerName=$SERVICE_NAME,containerPort=80"
         fi
 artifacts:
   files:
