--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,16 @@ phases:
       python: 3.12
     commands:
       - echo Setting up environments for services...
+      - export USERNAME=$(echo $CODEBUILD_BUILD_ID | cut -d':' -f1 | sed 's/-codebuild-project//');
+      - echo Username is $USERNAME;
+      - export $(cat deploy-vars.txt | xargs);
       - for service in $(ls services); do
           echo Setting up environment for $service;
           cd services/$service;
           echo Creating virtual environment for $service;
           python -m venv .$service_venv;
+          echo "export SERVICE_NAME=$USERNAME-$service" >> .$service_venv/bin/activate;
+          echo "export SERVICE_TYPE=$service" >> .$service_venv/bin/activate;
           source .$service_venv/bin/activate;
           echo Installing dependencies for $service;
           pip install --no-cache-dir -r requirements.txt;
@@ -23,13 +28,13 @@ phases:
         - for service in $(ls services); do
             cd services/$service;
             source .$service_venv/bin/activate;
-            echo Loading environment variables for $service;
-            export $(cat vars-dev.txt | xargs);
+            echo Service type is $SERVICE_TYPE;
             echo Service is $SERVICE_NAME;
             echo Account is $AWS_ACCOUNT_ID;
             echo Region is $AWS_REGION;
             echo ECR repo is $SERVICE_NAME;
             echo Cluster is $CLUSTER_NAME;
+            echo VPC Id is $VPC_ID;
             echo Logging in to Amazon ECR for $service;
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com;
             echo Running artifact setup for $service;
@@ -47,10 +52,10 @@ phases:
             source .$service_venv/bin/activate;
             echo Building artifacts for $service;
             bash build.sh;
-            source deactivate;
-            cd ../..;
             echo Building the Docker image for $service;
-            docker build --build-arg SERVICE_NAME=$env-$service -t $env-$service .;
+            docker build --build-arg SERVICE_NAME=$SERVICE_NAME -t $SERVICE_NAME .;
+            deactivate;
+            cd ../..;
           done
         - echo All services built successfully. Moving to deploy phase...
     post_build:
@@ -59,10 +64,11 @@ phases:
         - for service in $(ls services); do
             cd services/$service;
             source .$service_venv/bin/activate;
-            echo Deploying $service to ECR;
-            docker tag $env-$service:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$env-$service:latest;
-            docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$env-$service:latest;
-            echo Deployed $service to ECR;
+            echo Deploying $SERVICE_NAME to ECS;
+            docker tag $SERVICE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest;
+            docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest;
+            ./deploy.sh $AWS_ACCOUNT_ID $AWS_REGION $SERVICE_NAME $SERVICE_TYPE;
+            echo Deployed $SERVICE_NAME to ECS;
             source deactivate;
             cd ../..;
           done
