--- a/infra_setup/user-pipelines.yaml
+++ b/infra_setup/user-pipelines.yaml
@@ -49,12 +49,11 @@ Resources:
                 Provider: "CodeStarSourceConnection"
                 Version: "1"
               OutputArtifacts:
-                - Name: !Sub "${uid}SourceArtifact"
+                - Name: "SourceArtifact"
               Configuration:
                 ConnectionArn: !GetAtt CodeStarConnection.ConnectionArn
                 FullRepositoryId: !Sub "${githubprofile}/mlops-workshop"
                 BranchName: "main"
-                OutputArtifactFormat: "CODEPIPELINE_BUCKET_PATH_FORMAT"
               RunOrder: 1
         - Name: "Build"
           Actions:
@@ -65,7 +64,7 @@ Resources:
                 Provider: "CodeBuild"
                 Version: "1"
               InputArtifacts:
-                - Name: !Sub "${uid}SourceArtifact"
+                - Name: "SourceArtifact"
               Configuration:
                 ProjectName: !Ref CodeBuildProject
               RunOrder: 1
