use codebuild 6.0 and revise buildspec use of venv

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      python: 3.10
     commands:
       - echo Setting up environments for services...
       - export USERNAME=$(echo $CODEBUILD_BUILD_ID | cut -d':' -f1 | sed 's/-codebuild-project//');
@@ -14,10 +16,10 @@ phases:
           python -m venv .$service_venv;
           echo "export SERVICE_NAME=$USERNAME-$service" >> .$service_venv/bin/activate;
           echo "export SERVICE_TYPE=$service" >> .$service_venv/bin/activate;
-          source .$service_venv/bin/activate;
+          . .$service_venv/bin/activate;
           echo Installing dependencies for $service;
           pip install --no-cache-dir -r requirements.txt;
-          source deactivate;
+          deactivate;
           cd ../..;
         done
   pre_build:
@@ -25,7 +27,7 @@ phases:
       - echo Preparing setup for services...
       - for service in $(ls services); do
           cd services/$service;
-          source .$service_venv/bin/activate;
+          . .$service_venv/bin/activate;
           echo Service type is $SERVICE_TYPE;
           echo Service is $SERVICE_NAME;
           echo Account is $AWS_ACCOUNT_ID;
@@ -37,17 +39,17 @@ phases:
           aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com;
           echo Running artifact setup for $service;
           bash setup.sh;
-          source deactivate;
+          deactivate;
           cd ../..;
           echo Artifacts prepared for $service;
         done
-      - Artifacts prepared for all services, moving to build phase...
+      - echo Artifacts prepared for all services, moving to build phase...
   build:
     commands:
       - echo Training and building services...
       - for service in $(ls services); do
           cd services/$service;
-          source .$service_venv/bin/activate;
+          . .$service_venv/bin/activate;
           echo Building artifacts for $service;
           bash build.sh;
           echo Building the Docker image for $service;
@@ -61,13 +63,13 @@ phases:
       - echo Deploying services...
       - for service in $(ls services); do
           cd services/$service;
-          source .$service_venv/bin/activate;
+          . .$service_venv/bin/activate;
           echo Deploying $SERVICE_NAME to ECS;
           docker tag $SERVICE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest;
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest;
           ./deploy.sh $AWS_ACCOUNT_ID $AWS_REGION $SERVICE_NAME $SERVICE_TYPE;
           echo Deployed $SERVICE_NAME to ECS;
-          source deactivate;
+          deactivate;
           cd ../..;
         done
       - echo All services deployed successfully. Moving to cleanup phase...
