return to service path after priority calc

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -78,6 +78,7 @@ phases:
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_NAME:latest;
           cd ../../;
           PRIORITY_IF_NEW=$(bash get_new_priority_level.sh);
+          cd services/$service;
           bash deploy.sh $AWS_ACCOUNT_ID $AWS_REGION $SERVICE_NAME $SERVICE_TYPE $PRIORITY_IF_NEW;
           echo Deployed $SERVICE_NAME to ECS;
           deactivate;
