fixed ecs log group permissions for codebuild

--- a/infra_setup/codebuild-service-role.yaml
+++ b/infra_setup/codebuild-service-role.yaml
@@ -94,8 +94,8 @@ Resources:
             Resource: 
               - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${uid}-codebuild-project'
               - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${uid}-codebuild-project:*'
-              - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/ecs/${uid}-*'
-              - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/ecs/${uid}-*:*'
+              - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/ecs/${uid}-*'
+              - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/ecs/${uid}-*:*'
 
   ECRPolicy:
     Type: 'AWS::IAM::Policy'
